--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,20 @@
+/*
+ * Copyright (C) 2020 Google LLC
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ *
+ */
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
@@ -7,7 +24,9 @@ android {
     compileSdkVersion rootProject.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.example.android.architecture.blueprints.master"
+        // This ID uniquely identifies your app on the device and in Google Play Store
+        applicationId "com.example.myapp"
+
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.targetSdkVersion
         versionCode 1
@@ -34,8 +53,8 @@ android {
             testCoverageEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             testProguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguardTest-rules.pro'
+            isDefault = true
         }
-
         release {
             minifyEnabled true
             shrinkResources true
@@ -49,11 +68,17 @@ android {
     // If you need to add more flavors, consider using flavor dimensions.
     productFlavors {
         mock {
-            dimension "default"
+            // Keep in mind when using productFlavors:
+            // 1. When testing with the App Actions test tool, you require having an app by the same
+            // package name (as at least a draft) on Play Console.
+            // 2. If using applicationIdSuffix, either remove the suffix in your build script
+            // when testing App Actions or upload a Play Console draft with package name by
+            // applicationId + applicationIdSuffix.
             applicationIdSuffix = ".mock"
         }
         prod {
             dimension "default"
+            isDefault = true
         }
     }
 
