--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,5 @@
 # org.gradle.parallel=true
 android.enableJetifier=true
 android.useAndroidX=true
-android.enableR8=true
 kapt.incremental.apt=true
+org.gradle.jvmargs=-XX:MaxHeapSize=10280m -Xmx256m
