--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
     package="com.example.android.architecture.blueprints.todoapp"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Required for Firebase Analytics -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:name=".TodoApplication"
         android:icon="@mipmap/ic_launcher"
