--- a/build.gradle
+++ b/build.gradle
@@ -16,15 +16,15 @@
  */
 
 buildscript {
-    ext.kotlinVersion = '1.4.21'
-    ext.navigationVersion = '2.3.2'
+    ext.kotlinVersion = '1.4.32'
+    ext.navigationVersion = '2.3.5'
     ext.ktlintVersion = '0.33.0'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.android.tools.build:gradle:4.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
@@ -40,7 +40,7 @@ plugins {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     apply plugin: 'com.diffplug.gradle.spotless'
     spotless {
@@ -65,25 +65,24 @@ ext {
     androidXTestCoreVersion = '1.3.0'
     androidXTestExtKotlinRunnerVersion = '1.1.2'
     androidXTestRulesVersion = '1.2.0'
-    androidXAnnotations = '1.1.0'
+    androidXAnnotations = '1.2.0'
     androidXLegacySupport = '1.0.0'
     appCompatVersion = '1.2.0'
-    archLifecycleVersion = '2.2.0'
+    archLifecycleVersion = '2.3.1'
     archTestingVersion = '2.1.0'
     cardVersion = '1.0.0'
     coroutinesVersion = '1.2.1'
     dexMakerVersion = '2.12.1'
     espressoVersion = '3.3.0'
-    fragmentVersion = '1.2.5'
-    fragmentKtxVersion = '1.2.5'
+    fragmentVersion = '1.3.3'
+    fragmentKtxVersion = '1.3.3'
     hamcrestVersion = '1.3'
     junitVersion = '4.13.1'
-    materialVersion = '1.2.1'
+    materialVersion = '1.3.0'
     mockitoVersion = '2.22.0'
-    recyclerViewVersion = '1.1.0'
+    recyclerViewVersion = '1.2.0'
     robolectricVersion = '4.3.1'
-    roomVersion = '2.2.5'
+    roomVersion = '2.3.0'
     rulesVersion = '1.0.1'
-    timberVersion = '4.7.1'
     truthVersion = '1.1'
 }
