--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@
 android.enableJetifier=true
 android.useAndroidX=true
 kapt.incremental.apt=true
+
+org.gradle.jvmargs=-Xmx2048M -XX:MaxMetaspaceSize=512m
